# Placeholder CMakeLists.txt for projects/languages
# TODO: Convert the logic from projects/languages/Makefile to CMake.

cmake_minimum_required(VERSION 3.10)
project(webots_project_languages)

message(STATUS "Configuring projects/languages")

# Add build targets, sources, and installation rules here.
# For example:
# add_library(my_language_library my_source.c)
# target_link_libraries(my_language_library PRIVATE ${WEBOTS_HOME}/lib/Controller.so) # Example dependency
# install(TARGETS my_language_library DESTINATION lib)